resources/alloy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy-ui
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: monitoring-alloy-logs
  ports:
    - name: http
      port: 12345
      targetPort: 12345
      protocol: TCP
  type: ClusterIP
