resources/alloy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy-ui
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /      # same rewrite pattern
spec:
  ingressClassName: nginx
  rules:
    - host: alloy.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy-ui
                port:
                  number: 12345
